pointless commit for testing

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\Users\\mammu\\workspace\\loputoo\\loputoo\\joop","type":"PROJECT","hints":{"PROJECT_NAME":"joop"}},"ABSENT"],[{"location":"D:\\Program Files (x86)\\Java","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"D:\\Users\\mammu\\workspace\\loputoo\\loputoo\\joop","type":"PROJECT","hints":{"PROJECT_NAME":"joop"}},"ABSENT"]]
