--- a/joop/build.gradle
+++ b/joop/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 	runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('com.sun.jersey:jersey-bundle:1.19.3')
+	compile('com.google.code.gson:gson:2.8.0')
 }
