--- a/joop/src/main/resources/application.yml
+++ b/joop/src/main/resources/application.yml
@@ -6,3 +6,21 @@ spring:
    jpa:
       hibernate:
          ddl-auto: update
+moss:
+   userid: "567472279"
+github:
+   user: mariakert
+   pass: Parool123
+mailgun:
+   apikey: key-530340de58ee7be39a1358ae50b0d786
+paths:
+   files:
+      hash: "D:/Users/mammu/workspace/loputoo/hashes/"
+      plagiarism: "D:/Users/mammu/workspace/loputoo/plagiarism/"
+      repos: "D:/Users/mammu/workspace/loputoo/repod/"
+      zips: "D:/Users/mammu/workspace/loputoo/zips/"
+   scripts:
+      pull: "D:/Users/mammu/workspace/loputoo/loputoo/bash/pullhook.sh"
+      hash: "D:/Users/mammu/workspace/loputoo/loputoo/bash/hashcreator.sh"
+      zip: "D:/Users/mammu/workspace/loputoo/loputoo/bash/zipcreator.sh"
+      copy: "D:/Users/mammu/workspace/loputoo/loputoo/bash/copyfiles.sh"
