Created projectcreator.sh - makes maven projects with server files and zips them Added new dependencies to build.gradle - they are deprecated Renamed IDEService to EclipseService, EditorService to IDEService Added new method to FileReader - getPackagePath: returns project package path Created CentralService for testing purposes initially Modified other classes to clean code a bit

--- a/joop/build.gradle
+++ b/joop/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'org.eclipse.jdt.core'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -30,6 +31,8 @@ dependencies {
 	compile('com.google.code.gson:gson:2.8.0')
 	compile('org.mariadb.jdbc:mariadb-java-client:1.5.9')
 	compile('it.zielke:moji:1.0.2')
+	compile('org.eclipse.jdt:org.eclipse.jdt.core:3.12.3')
+	compile('org.eclipse.jdt:launching:3.3.0-v20070510')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
