Created MailController - will send emails in the future Modified FileReader - Inputs will only be strings now so other classes wouldn't have to import File Updated all classes that use FileReader FileReader will be renamed since it also writes now Added new variable to application.yml - gist web path

--- a/joop/src/main/resources/application.yml
+++ b/joop/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
    jpa:
       hibernate:
          ddl-auto: update
+gist:
+   link: "https://gist.github.com/mariakert/"
 moss:
    userid: "567472279"
 github:
