--- a/joop/build.gradle
+++ b/joop/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 	compile('com.google.code.gson:gson:2.8.0')
 	compile('org.mariadb.jdbc:mariadb-java-client:1.5.9')
 	compile('it.zielke:moji:1.0.2')
+	compile('org.webjars.bower:angular:1.6.4')
+	compile('org.webjars:bootstrap:3.3.7')
+	// https://mvnrepository.com/artifact/org.eclipse.mylyn.github/org.eclipse.egit.github.core
+	compile('org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5')
+	
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
