Implemented basic login. Created User object to store values, LoginController and Service for data validation. Hardcoded user and pass to application.yml Created login.html, login.js and login.css for the login page. Added angular-route for routing.

--- a/joop/src/main/resources/application.yml
+++ b/joop/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
    jpa:
       hibernate:
          ddl-auto: update
+app:
+   user: joop
+   pass: joopapplication2017
 moss:
    userid: "567472279"
 github:
